[tool.poetry]
name = "bentoml_poc"
version = "0.1.0"
description = "PoC for BentoML"
authors = ["mbadensoe"]

[tool.poetry.dependencies]
python = "^3.7"
bentoml = "^0.7.6"
scikit-learn = "^0.23.0"
flake8 = "^3.8.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
